missing ; in the config

--- a/cookbooks/custom_stack_conf/templates/default/stack.conf.erb
+++ b/cookbooks/custom_stack_conf/templates/default/stack.conf.erb
@@ -1,5 +1,5 @@
 passenger_root /usr/libexec/passenger;
-passenger_spawn_method <%= @passenger_spawn_method %>
+passenger_spawn_method <%= @passenger_spawn_method %>;
 passenger_max_pool_size <%= @passenger_max_pool_size %>;
 passenger_max_instances_per_app <%= @passenger_max_instances_per_app %>;
 passenger_pool_idle_time <%= @passenger_pool_idle_time %>;
